<resources>
    <string name="app_name">Android Labs</string>

    <string name="email">Enter your email address: </string>
    <string name="hint_email">Type email here</string>
    <string name="password">Type your password: </string>
    <string name="ButtonText2">Login </string>
    <string name="chatButton">Go to chat</string>
    <string name="chatType">Type here</string>
    <string name="chatSend">SEND</string>
    <string name="chatRecv">RECEIVE</string>
    <string name="yourprofile">Your profile</string>
    <string name="yourname">Your name: </string>
    <string name="youremail">Your email: </string>
    <string name="yourpicture">Your picture: </string>
    <string name="click">Click the button above to take a picture</string>
    <string name="hint_email1">Enter your email </string>
    <string name="hint_name">Enter your name </string>
    <string name="icon_1">Choice1 </string>
    <string name="icon_2">Choice2</string>
    <string name="icon_3">Choice3</string>
    <string name="icon_4">About</string>
    <string name="Toolbarbutton">Go to ToolBar Page</string>
    <string name="weatherForcastButton">Go to Weather Forcast Page</string>
</resources>