<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/item1"
        android:title="@string/icon_1"
        android:icon="@drawable/icon1"
        android:orderInCategory="100"
        app:showAsAction="always"/>
    <item android:id="@+id/item2"
        android:title="@string/icon_2"
        android:icon="@drawable/icon2"
        android:orderInCategory="90"
        app:showAsAction="always"/>
    <item android:id="@+id/item3"
        android:title="@string/icon_3"
        android:icon="@drawable/icon3"
        android:orderInCategory="80"
        app:showAsAction="always"/>
    <item android:id="@+id/item4"
        android:title="@string/icon_4"
        android:orderInCategory="70"
        app:showAsAction="never"/>
</menu>