<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:id="@+id/rlayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresher"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:visibility="visible">

        <ListView
            android:id="@+id/list1"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true" />

    </android.support.v4.widget.SwipeRefreshLayout>


    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/chatSend" />

    <EditText

        android:id="@+id/chatType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/buttonRecv"
        android:layout_toRightOf="@id/buttonSend"

        android:layout_alignParentBottom="true"

        android:hint="@string/chatType"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/buttonRecv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/chatRecv" />

</RelativeLayout>


